2005-03-02  Jim Meyering  <jim@meyering.net>

	* closeout.m4, fpending.m4, mbrtowc.m4, quotearg.m4: New from gnulib.
	* gnulib.m4: Regenerated.

2005-03-01  Derek Price  <derek@ximbiot.com>

	Update installed GNULIB modules.
	* alloca.m4, allocsa.m4, atexit.m4, bison.m4, clock_time.m4,
	codeset.m4, dirname.m4, dos.m4, eealloc.m4, eoverflow.m4, exitfail.m4,
	extensions.m4, fnmatch.m4, getcwd.m4, getdate.m4, gethostname.m4,
	getline.m4, getndelim2.m4, getnline.m4, getopt.m4, getpagesize.m4,
	getpass.m4, gettext.m4, gettime.m4, gettimeofday.m4, glibc21.m4,
	gnulib.m4, iconv.m4, intdiv0.m4, intmax.m4, intmax_t.m4,
	inttypes-pri.m4, inttypes_h.m4, lcmessage.m4, lib-ld.m4, lib-link.m4,
	lib-prefix.m4, longdouble.m4, longlong.m4, lstat.m4, mbstate_t.m4,
	md5.m4, memmove.m4, mkstemp.m4, mktime.m4, nanosleep.m4, nls.m4,
	pathmax.m4, po.m4, printf-posix.m4, progtest.m4, readlink.m4, regex.m4,
	restrict.m4, rpmatch.m4, save-cwd.m4, setenv.m4, signed.m4,
	size_max.m4, ssize_t.m4, st_mtim.m4, stat.m4, stdbool.m4, stdint.m4,
	stdint_h.m4, strcase.m4, strerror.m4, strerror_r.m4, strftime.m4,
	time_r.m4, timespec.m4, tm_gmtoff.m4, tzset.m4, uint32_t.m4,
	uintmax_t.m4, ulonglong.m4, unlocked-io.m4, vasnprintf.m4,
	vasprintf.m4, wchar_t.m4, wint_t.m4, xalloc.m4, xgetcwd.m4,
	xreadlink.m4, xsize.m4, yesno.m4: Updated from GNULIB.
	* chdir-long.m4, d-ino.m4, dup2.m4, error.m4, ftruncate.m4,
	getcwd-path-max.m4, glibc2.m4, mempcpy.m4, memrchr.m4, mkdir-slash.m4,
	openat.m4, rename.m4, strstr.m4, strtol.m4, strtoul.m4: New files from
	GNULIB.

2004-11-17  Derek Price  <derek@ximbiot.com>

	* getopt.m4: Update from GNULIB.

2004-11-11  Mark D. Baushke  <mdb@cvshome.org>

	* getopt.m4: Update from GNULIB.

2004-11-09  Mark D. Baushke  <mdb@cvshome.org>

	* strftime.m4: Update from GNULIB.

2004-11-03  Mark D. Baushke  <mdb@cvshome.org>

	* uint32_t.m4: Update from GNULIB.

2004-11-03  Derek Price  <derek@ximbiot.com>

	* bison.m4 (gl_BISON): Update comment to specify the correct Automake